// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price Summary Component it should match empty state snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bdnxRM elkMxd"
        width="290px,450px"
      >
        <div
          class="sc-bdnxRM sc-gtsrHT fcOtpP"
          data-testid="price-summary-empty"
          display="flex"
        >
          <div
            class="sc-dlnjwi gCGEFP"
            font-size="sm"
            font-weight="bold"
          >
            Cart is Empty!!
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bdnxRM elkMxd"
      width="290px,450px"
    >
      <div
        class="sc-bdnxRM sc-gtsrHT fcOtpP"
        data-testid="price-summary-empty"
        display="flex"
      >
        <div
          class="sc-dlnjwi gCGEFP"
          font-size="sm"
          font-weight="bold"
        >
          Cart is Empty!!
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Price Summary Component it should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bdnxRM jcpITf"
        width="290px,450px"
      >
        <div
          class="sc-bdnxRM lmKwmz"
          data-testid="price-summary-item"
        >
          <div
            class="sc-bdnxRM sc-gtsrHT iOuxLz"
            display="flex"
          >
            <div
              class="sc-dlnjwi cKxMDg"
              font-size="sm"
              font-weight="regular"
            >
              Chicken Sausage & Spinach Ravioli
                
            </div>
            <div
              class="sc-dlnjwi cKxMDg"
              font-size="sm"
              font-weight="regular"
            >
              $17.98
            </div>
          </div>
          <div
            class="sc-bdnxRM jhkwhO"
          />
        </div>
        <div
          class="sc-bdnxRM lmKwmz"
          data-testid="price-summary-item"
        >
          <div
            class="sc-bdnxRM sc-gtsrHT iOuxLz"
            display="flex"
          >
            <div
              class="sc-dlnjwi cKxMDg"
              font-size="sm"
              font-weight="regular"
            >
              Gouda Vibes Burgers
                
            </div>
            <div
              class="sc-dlnjwi cKxMDg"
              font-size="sm"
              font-weight="regular"
            >
              $17.98
            </div>
          </div>
          <div
            class="sc-bdnxRM jhkwhO"
          />
        </div>
        <div
          class="sc-bdnxRM lmKwmz"
          data-testid="price-summary-item"
        >
          <div
            class="sc-bdnxRM sc-gtsrHT iOuxLz"
            display="flex"
          >
            <div
              class="sc-dlnjwi cKxMDg"
              font-size="sm"
              font-weight="regular"
            >
              Figgy Balsamic Pork
                
            </div>
            <div
              class="sc-dlnjwi cKxMDg"
              font-size="sm"
              font-weight="regular"
            >
              $17.98
            </div>
          </div>
          <div
            class="sc-bdnxRM jhkwhO"
          />
        </div>
        <div
          class="sc-bdnxRM sc-gtsrHT iOuxLz"
          data-testid="price-summary-shipping"
          display="flex"
        >
          <div
            class="sc-dlnjwi cKxMDg"
            font-size="sm"
            font-weight="regular"
          >
            Shipping
          </div>
          <div
            class="sc-dlnjwi cKxMDg"
            data-testid="price-summary-shipping-item"
            font-size="sm"
            font-weight="regular"
          >
            $12.98
          </div>
        </div>
        <div
          class="sc-bdnxRM jhkwhO"
        />
        <div
          class="sc-bdnxRM kvgPit"
        />
        <div
          class="sc-bdnxRM jhkwhO"
        />
        <div
          class="sc-bdnxRM sc-gtsrHT iOuxLz"
          data-testid="price-summary-total"
          display="flex"
        >
          <div
            class="sc-dlnjwi gCGEFP"
            font-size="sm"
            font-weight="bold"
          >
            Total
          </div>
          <div
            class="sc-dlnjwi gCGEFP"
            data-testid="price-summary-total-item"
            font-size="sm"
            font-weight="bold"
          >
            $66.92
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bdnxRM jcpITf"
      width="290px,450px"
    >
      <div
        class="sc-bdnxRM lmKwmz"
        data-testid="price-summary-item"
      >
        <div
          class="sc-bdnxRM sc-gtsrHT iOuxLz"
          display="flex"
        >
          <div
            class="sc-dlnjwi cKxMDg"
            font-size="sm"
            font-weight="regular"
          >
            Chicken Sausage & Spinach Ravioli
              
          </div>
          <div
            class="sc-dlnjwi cKxMDg"
            font-size="sm"
            font-weight="regular"
          >
            $17.98
          </div>
        </div>
        <div
          class="sc-bdnxRM jhkwhO"
        />
      </div>
      <div
        class="sc-bdnxRM lmKwmz"
        data-testid="price-summary-item"
      >
        <div
          class="sc-bdnxRM sc-gtsrHT iOuxLz"
          display="flex"
        >
          <div
            class="sc-dlnjwi cKxMDg"
            font-size="sm"
            font-weight="regular"
          >
            Gouda Vibes Burgers
              
          </div>
          <div
            class="sc-dlnjwi cKxMDg"
            font-size="sm"
            font-weight="regular"
          >
            $17.98
          </div>
        </div>
        <div
          class="sc-bdnxRM jhkwhO"
        />
      </div>
      <div
        class="sc-bdnxRM lmKwmz"
        data-testid="price-summary-item"
      >
        <div
          class="sc-bdnxRM sc-gtsrHT iOuxLz"
          display="flex"
        >
          <div
            class="sc-dlnjwi cKxMDg"
            font-size="sm"
            font-weight="regular"
          >
            Figgy Balsamic Pork
              
          </div>
          <div
            class="sc-dlnjwi cKxMDg"
            font-size="sm"
            font-weight="regular"
          >
            $17.98
          </div>
        </div>
        <div
          class="sc-bdnxRM jhkwhO"
        />
      </div>
      <div
        class="sc-bdnxRM sc-gtsrHT iOuxLz"
        data-testid="price-summary-shipping"
        display="flex"
      >
        <div
          class="sc-dlnjwi cKxMDg"
          font-size="sm"
          font-weight="regular"
        >
          Shipping
        </div>
        <div
          class="sc-dlnjwi cKxMDg"
          data-testid="price-summary-shipping-item"
          font-size="sm"
          font-weight="regular"
        >
          $12.98
        </div>
      </div>
      <div
        class="sc-bdnxRM jhkwhO"
      />
      <div
        class="sc-bdnxRM kvgPit"
      />
      <div
        class="sc-bdnxRM jhkwhO"
      />
      <div
        class="sc-bdnxRM sc-gtsrHT iOuxLz"
        data-testid="price-summary-total"
        display="flex"
      >
        <div
          class="sc-dlnjwi gCGEFP"
          font-size="sm"
          font-weight="bold"
        >
          Total
        </div>
        <div
          class="sc-dlnjwi gCGEFP"
          data-testid="price-summary-total-item"
          font-size="sm"
          font-weight="bold"
        >
          $66.92
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
